specs/ingress/test-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: test
  replicas: 2
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: nginxdemos/hello
        ports:
        - containerPort: 80
