specs/ingress/nginx-ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  externalIPs:
  - 127.0.0.1
  ports:
  - port: 80
    name: http
    nodePort: 30977
  selector:
    app: nginx-ingress
