specs/ingress/tesk-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesk-svc
  labels:
    app: tesk-api
spec:
  ports:
  - port: 8080
  selector:
    app: tesk-api
