specs/ingress/test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  labels:
    app: test
spec:
  ports:
  - port: 80
  selector:
    app: test
